# featurewiz_polars

./: .gitignore  CONTRIBUTING.md  NREADME.md  README.md  featurewiz_polars.py  fs_test.py  polars_datetime_transformer.py  polars_other_transformers.py  pyproject.toml  requirements.txt  setup.py
examples/: featurewiz-polars-test.ipynb  featurewiz_polars_test1.ipynb  fs_comparison_test.py  fs_lazytransform_test.py  fs_mr_comparison_test.py  fs_mrmr_comparison_test.py  fs_test.py  fw_polars_test2.ipynb  fw_polars_test_alone.ipynb  fw_polars_vs_featurewiz_test.ipynb
examples/.ipynb_checkpoints/: fw_polars_test1-checkpoint.ipynb  fw_polars_test2-checkpoint.ipynb  fw_polars_vs_featurewiz_test-checkpoint.ipynb
featurewiz_polars/: __init__.py  __version__.py  featurewiz_polars.py  polars_categorical_encoder.py  polars_datetime_transformer.py  polars_other_transformers.py  polars_sulov_mrmr.py  print_metrics.py
tests/: fs_test.py  unit_test.py
