[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "featurewiz_polars"
version = "0.3.0"
authors = [
    { name = "Ram Seshadri" },
]
description = "Perform feature engineering and selection fast using Polars"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Pre-Production",  # Be honest about maturity
    "License :: OSI Approved :: Apache Software 2.0 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Add keywords for better searchability on PyPI
keywords = ["feature engineering", "feature selection", "polars", "machine learning", "automl", "SULOV"]
dependencies = [
    "numpy<2.0",
    "pandas>=1.2.4",
    "scipy",
    "scikit-learn>=1.2.2",
    "xgboost>=1.6",
    "polars>=1.23.0",
    "pyarrow",
    "kneed",
    "joblib",     # For potential parallel processing
    "logging",    # Standard library, but good practice
    "typing",     # Standard library
    # Add any other direct dependencies
]

# Add Project URLs
[project.urls]
Homepage = "https://github.com/AutoViML/featurewiz_polars"
Repository = "https://github.com/AutoViML/featurewiz_polars"
Documentation = "https://autoviml.github.io/featurewiz_polars/" # Example: Use GitHub Pages or ReadTheDocs
Bug_Tracker = "https://github.com/AutoViML/featurewiz_polars/issues"

# Define Optional Dependencies for Development and Documentation
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",        # Linter and formatter
    "black>=23.0",      # Formatter (optional if using ruff format)
    "mypy>=1.0",        # Static type checker
    "pre-commit>=3.0",  # For running checks automatically before commits
]
docs = [
    "Sphinx>=6.0",      # Or MkDocs
    "sphinx-rtd-theme", # Example theme
    "myst-parser",      # For Markdown support in Sphinx
    # Add other documentation build dependencies
]
