[project]
name = "featurewiz_polars"
version = "0.3.0"
description = "Fast feature selection using MRMR algorithm and Polars for large datasets."
authors = [{ name = "Ram Seshadri" }]
license = "apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
urls = { Homepage = "https://github.com/AutoViML/featurewiz_polars" }
dependencies = [
    "numpy>=2.0",
    "pandas>=1.2.4",
    "scipy",
    "scikit-learn>=1.2.2",
    "xgboost>=1.6",
    "polars>=1.23.0",
    "pyarrow",
    "kneed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["featurewiz_polars"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
featurewiz_polars = { path = ".", editable = true }

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }

[dependency-groups]
test = ["pytest"]
